--- a/main.handlebars
+++ b/main.handlebars
@@ -1,4 +1,5 @@
-<!doctype html>
+{{{body}}}
+<!-- <!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -7,4 +8,4 @@
 <body>
   {{{body}}}
 </body>
-</html>
+</html> -->
