--- a/templates/modules/search/search.tpl.html
+++ b/templates/modules/search/search.tpl.html
@@ -98,16 +98,8 @@
                   </a> -->
 
                   <ul class="list-unstyled tree-ul tree-container">
-                    <li ng-if="data.visible" ng-repeat="data in categoryHierarchy" ng-include="'treeView.html'"></li>
+                    <li ng-if="data.visible" ng-repeat="data in categoryHierarchy" ng-include="'modules/search/tree-view.tpl.html'"></li>
                   </ul>
-
-                  <script type="text/ng-template" id="treeView.html">
-                    <a class="category-name" ng-class="{ active: data.active }"  ng-click="clickCategory( data )">{{data.name}}</a>
-                    <i class="fa fa-check check-icon" ng-if="data.active"></i>
-                    <ul class="list-unstyled tree-ul">
-                      <li ng-if="data.visible" ng-repeat="data in data.children" ng-include="'treeView.html'"></li>
-                    </ul>
-                  </script>
                 </div>
               </div>
             </div>
