--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -12,40 +12,52 @@
       window.bootstrappedData = {{json data}};
     {{/interpolatedScript}}
 
+    <style>
+      [data-hbs-hide] {
+        display: none !important;
+      }
+
+      [data-hbs-show] {
+        display: block !important;
+      }
+    </style>
+
   </head>
   <body ui-event="{ dragover: '$event.preventDefault()', drop: '$event.preventDefault()' }">
     <header class="header hidden-xs">
       <img class="logo" src="assets/images/shopsense-logo.png">
 
       <nav class="navbar navbar-default main-nav" role="navigation">
-        <li ng-class="{ active: openTab.name == 'search' }">
-          <a ng-model="openTab.name" btn-radio="'search'"><i class="fa fa-search"></i> Search</a>
-        </li>
-        <!--           <li class="hidden-xs" class="dropdown" ng-class="{ active: openTab.name == 'tools' }">
-          <a href="#/tools">Tools</a>
-        </li> -->
-        <li ng-class="{ active: openTab.name == 'insights' }">
-          <a ng-model="openTab.name" btn-radio="'insights'"><i class="fa fa-bar-chart-o"></i> Insights</a>
-        </li>
-        <li ng-class="{ active: openTab.name == 'account' }">
-          <a ng-model="openTab.name" btn-radio="'account'"><i class="fa fa-user"></i> Account</a>
-        </li>
-        <li ng-class="{ active: openTab.name == 'tag' }">
-          <a ng-model="openTab.name" btn-radio="'tag'"><i class="fa fa-circle-o"></i> Tag Photo</a>
-        </li>
-        <li ng-class="{ active: openTab.name == 'tools' }">
-          <a ng-model="openTab.name" btn-radio="'tools'"><i class="fa fa-th"></i> Widget</a>
-        </li>
-        <li ng-class="{ active: openTab.name == 'post' }">
-          <a ng-model="openTab.name" btn-radio="'post'"><i class="fa fa-plus"></i> Post</a>
-        </li>
-        <li class="main-selected-products-container">
-          <a ng-show="selectedProducts.length" class="btn fa fa-times clear-selected-products-button" ng-click="utils.clear(selectedProducts)"></a>
+        <ul class="nav navbar-nav">
+          <li ng-class="{ active: openTab.name == 'search' }">
+            <a ng-model="openTab.name" btn-radio="'search'"><i class="fa fa-search"></i> Search</a>
+          </li>
+          <!--           <li class="hidden-xs" class="dropdown" ng-class="{ active: openTab.name == 'tools' }">
+            <a href="#/tools">Tools</a>
+          </li> -->
+          <li ng-class="{ active: openTab.name == 'insights' }">
+            <a ng-model="openTab.name" btn-radio="'insights'"><i class="fa fa-bar-chart-o"></i> Insights</a>
+          </li>
+          <li ng-class="{ active: openTab.name == 'account' }">
+            <a ng-model="openTab.name" btn-radio="'account'"><i class="fa fa-user"></i> Account</a>
+          </li>
+          <li ng-class="{ active: openTab.name == 'tag' }">
+            <a ng-model="openTab.name" btn-radio="'tag'"><i class="fa fa-circle-o"></i> Tag Photo</a>
+          </li>
+          <li ng-class="{ active: openTab.name == 'tools' }">
+            <a ng-model="openTab.name" btn-radio="'tools'"><i class="fa fa-th"></i> Widget</a>
+          </li>
+          <li ng-class="{ active: openTab.name == 'post' }">
+            <a ng-model="openTab.name" btn-radio="'post'"><i class="fa fa-plus"></i> Post</a>
+          </li>
+          <li class="main-selected-products-container">
+            <a ng-show="selectedProducts.length" class="btn fa fa-times clear-selected-products-button" ng-click="utils.clear(selectedProducts)"></a>
 
-          <a ng-click="utils.remove(selectedProducts, product)" class="main-selected-product" ng-repeat="product in selectedProducts">
-            <img src="{{product.image.sizes.Small.url}}">
-          </a>
-        </li>
+            <a ng-click="utils.remove(selectedProducts, product)" class="main-selected-product" ng-repeat="product in selectedProducts">
+              <img src="{{product.image.sizes.Small.url}}">
+            </a>
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -74,6 +86,14 @@
     <div ng-init="openTab.name = openTab.name || 'search'" ng-click="openTab.name = $event.target == $event.currentTarget ? null : openTab.name" ng-class="{ active: openTab.name }" ng-include="'templates/main-tab-content.tpl.html'" class="main-view content-background">
     </div>
     <!-- <div class="main-view" ui-view="main"></div> -->
+
+
+    <script>
+      _.each(document.querySelectorAll('[data-hbs-show], [data-hbs-hide]'), function (index, el) {
+        el.removeAttribute('data-hbs-show');
+        el.removeAttribute('data-hbs-hide');
+      });
+    </script>
   </body>
 </html>
 
